<resources>
    <string name="app_name">Trainee Management</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="how_are_you_doing_this_is_a_long_message_that_should_probably_wrap">How are you doing? This is a long message that should probably wrap.</string>
    <string name="rose">Rose</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="position">position:</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="user_name">User Name</string>
    <string name="action_email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="sex">Sex</string>
    <string name="birthday">Birthday</string>
    <string name="profile">Profile</string>
    <string name="title_activity_adding_task">AddingTaskActivity</string>
    <string name="title_activity_detail_task">DetailTaskActivity</string>
    <string name="task">Task</string>
    <string name="create_project_success">Bạn đã tạo project thành công</string>
    <string name="creae_new_project">Create new project</string>
    <string name="end_date">End Date</string>
    <string name="project_name">Project Name</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="status">Status</string>
    <string name="summary">Summary</string>
    <string name="app_trainee_management">App Trainee Management</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="group">Group</string>
    <string name="attendance">Attendance</string>
    <string name="project">Project</string>
    <string name="manage_user">Manage User</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="create_chatroom">Chat room</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="create_group">Create Group</string>
    <string name="name_group">Name Group:</string>
    <string name="edit_group">Edit Group</string>
    <string name="your_message">Your message</string>
</resources>
