<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/androidbg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_above="@id/lav_no_internet"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/no_internet_connection"
            android:textAllCaps="true"
            android:textColor="#FF9944"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:fontFamily="@font/fontbanhmi"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lav_no_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/no_internet_connection_hamburger"
            app:lottie_loop="true"/>

        <ScrollView
            android:id="@+id/sv_content"
            style="@style/parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="12">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="12dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/chat"
                                    android:textSize="18sp" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:onClick="chatClicked"
                                    android:src="@drawable/chat" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="12dp"
                            android:layout_weight="1"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/project"
                                    android:textSize="18sp" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:onClick="ProjectClicked"
                                    android:src="@drawable/bookmark" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/admin_home"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:layout_weight="1"
                            android:visibility="gone"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:onClick="AdminClicked"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/manage_user"
                                    android:textSize="18sp" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:src="@drawable/icon_person" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/car_summary"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:layout_weight="1"
                            android:visibility="gone"
                            app:cardCornerRadius="12dp"
                            app:cardElevation="6dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:text="@string/summary"
                                    android:textSize="18sp" />

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="80dp"
                                    android:layout_height="80dp"
                                    android:onClick="ConcludeClicked"
                                    android:src="@drawable/bitcoin" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />
</androidx.drawerlayout.widget.DrawerLayout>